--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.10.59
+      KAFKA_ADVERTISED_HOST_NAME: 10.5.73.84
       KAFKA_CREATE_TOPICS: "front:1:1,rear:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
@@ -19,4 +19,8 @@ services:
     ports:
       - "9000:9000"
     environment:
-      ZK_HOST: 192.168.10.59:2181
+      ZK_HOST: 10.5.73.84:2181
+  blackhole:
+    image: tecnativa/smtp-sink:latest
+    ports:
+      - "30025:25"
