--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "9092:9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: 10.5.73.84
-      KAFKA_CREATE_TOPICS: "front:1:1:compact,rear:1:1"
+      KAFKA_CREATE_TOPICS: "front:1:1,rear:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
